fix bug of text-align for email input and add copy to clipboard in contact page

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,13 @@
     font-weight: 100;
 }
 
+input[type=email], input[type=number] {
+    direction: ltr;
+}
 
+input[type=email]::placeholder, input[type=number]::placeholder {
+    text-align: right;
+}
 
 * {
     font-family: font-fa;
